--- a/expensetrackersystem/app/build.gradle
+++ b/expensetrackersystem/app/build.gradle
@@ -1,16 +1,18 @@
 plugins {
-    id 'com.android.application'
+    alias(libs.plugins.androidApplication)
 }
 
 android {
-    compileSdk 31
+    namespace 'com.example.mad'
+    compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.expensetrackersystem"
-        minSdk 21
-        targetSdk 31
+        applicationId "com.example.mad"
+        minSdk 24
+        targetSdk 34
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -28,16 +30,9 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-    implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
-
+    implementation libs.appcompat
+    implementation libs.material
+    testImplementation libs.junit
+    androidTestImplementation libs.ext.junit
+    androidTestImplementation libs.espresso.core
 }
