--- a/expensetrackersystem/app/build.gradle
+++ b/expensetrackersystem/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.mad'
+    namespace 'com.example.mad_expense_tracker'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.mad"
+        applicationId "com.example.mad_expense_tracker"
         minSdk 24
         targetSdk 34
         versionCode 1
@@ -32,6 +32,8 @@ dependencies {
 
     implementation libs.appcompat
     implementation libs.material
+    implementation libs.activity
+    implementation libs.constraintlayout
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
